--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -97,7 +97,8 @@ ion-row {
       background-color: #263666;
       justify-content: center;
       max-height: 100%;
-      max-width: 10000px;
+      max-width: 100%;
+      width: 100%;
     }
   }
   .row {
