adding devices+sending data to specific devices

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
         <ion-col align-self-center size="6">
           <ion-card class="top">
             <ion-card-title class="welcome">
-              Device:<br /><span class="Span">farmest17a</span>
+              Device:<br /><span class="Span">{{item}}</span>
             </ion-card-title>
           </ion-card>
         </ion-col>
