--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,24 @@
             </ion-card-title>
           </ion-card>
         </ion-col>
-        <ion-col align-self-center size="3">
+        <!-- --------------------------------------------------------------------------------- -->
+
+        <ion-row justify-content-centre>
+          <ion-col align-self-center size="3">
+            <!-- <div [formGroup]="myGroup"> -->
+            <!-- <ion-toggle
+                [(ngModel)]="myValue"
+                formControlName="setauto"
+                (ionChange)="myChange($event)"
+              ></ion-toggle> -->
+            <!-- <ion-toggle (ionChange)="notify(value)"></ion-toggle> -->
+            <!-- </div> -->
+            <ion-toggle></ion-toggle>
+          </ion-col>
+        </ion-row>
+
+        <!-- -------------------------------------------------------------- -->
+        <!-- <ion-col align-self-center size="3">
           <ion-button color="light" expand="full" fill="solid">
             Auto</ion-button
           >
@@ -30,9 +47,18 @@
           <ion-button color="tertiary" expand="full" fill="solid">
             Manual</ion-button
           >
-        </ion-col>
+        </ion-col> -->
+        <!-- -------------------------------------------------------------------------------------- -->
       </ion-row>
-
+      <!-- ----------------------------------------------------------------------------------------- -->
+      <!-- ---------------------------------------------------------------------------------------------------- -->
+      <!-- <ion-row justify-content-centre>
+        <ion-col align-self-center size="3">
+          <ion-checkbox color="primary"></ion-checkbox>
+          <ion-label>Auto</ion-label>
+        </ion-col>
+      </ion-row> -->
+      <!-- ------------------------------------------------------------------------------------ -->
       <ion-row justify-content-centre>
         <ion-col align-self-center>
           <ion-card class="bottom">
