--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,6 +30,14 @@ ion-row {
 #container a {
   text-decoration: none;
 }
+/**********************************/
+// .bottom {
+//   width: 100%;
+//   height: 100%;
+//   max-width: 100%;
+//   max-height: 100%;
+// }
+/*******************************************/
 [cards] {
   // justify-content: center;
   .grid-full ion-col {
@@ -75,30 +83,39 @@ ion-row {
     }
     .temp {
       background-color: #28e0ae;
+      width: 100%;
+      height: 100%;
       max-height: 100%;
       max-width: 100%;
     }
     .water {
       background-color: #5d50fe;
+      width: 100%;
+      height: 100%;
       max-height: 100%;
       max-width: 100%;
     }
     .soil {
       background-color: #0090ff;
+      width: 100%;
+      height: 100%;
       max-height: 100%;
       max-width: 100%;
     }
     .humidity {
       background-color: #f88f59;
+      width: 100%;
+      height: 100%;
       max-height: 100%;
       max-width: 100%;
     }
     .motor-status {
       background-color: #263666;
       justify-content: center;
+      width: 100%;
+      height: 100%;
       max-height: 100%;
       max-width: 100%;
-      width: 100%;
     }
   }
   .row {
